job card description box overflow fixed

--- a/src/Components/JobCard.css
+++ b/src/Components/JobCard.css
@@ -80,6 +80,7 @@
     position: relative;
     padding: 0;
     text-align: start;
+    width: 100%;
 }
 
 ::-webkit-scrollbar {
